# matrix_mozilla_bot

./: .gitignore  Cargo.toml  example_config.toml
src/: main.rs  matrix.rs  mozilla.rs
