[package]
name = "matrix_mozilla_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
config = "^0.13"
matrix-sdk = { version = "^0.6", features = ["e2e-encryption", "native-tls"], default-features=false }
reqwest = { version = "^0.11", features = [ "native-tls" ], default-features=false }
scraper = { version = "^0.14", default-features=false }
tokio = { version = "1.25.0", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = "^0.3"
