[package]
name = "matrix_mozilla_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
config = "^0.13"
matrix-sdk = { git="https://github.com/matrix-org/matrix-rust-sdk", features = ["e2e-encryption", "native-tls"], default-features=false }
reqwest = { version = "^0.11", features = [ "native-tls" ], default-features=false }
scraper = { version = "^0.14", default-features=false }
tokio = { version = "1.25.0", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = "^0.3"
rpassword = "5.0"
regex = "1"

[features]
sso-login = ["matrix-sdk/sso-login"]
